cambios en playlist

--- a/OmarProyectoSymfony/public/cancionesPlaylist.html
+++ b/OmarProyectoSymfony/public/cancionesPlaylist.html
@@ -48,6 +48,9 @@
 
         <div id="containerBody">
             <!-- con background negro -->
+            
+            <div id="cancionesList"></div> 
+            <div id="playlistList"></div> <!-- para que coja el contenedor de playlist -->
             <div id="indexList"></div>
         </div>
         
@@ -68,8 +71,8 @@
     </footer>
 
 
-    <script src="script/scriptPlaylist.js"></script>
-    <!-- <script src="script/script.js"></script> -->
+    <!-- <script src="script/scriptPlaylist.js"></script> -->
+    <script src="script/cancionesPlaylist.js"></script>
 </body>
 
 </html>
