--- a/OmarProyectoSymfony/public/playlist.html
+++ b/OmarProyectoSymfony/public/playlist.html
@@ -70,5 +70,6 @@
     
 
     <script src="script/scriptPlaylist.js"></script>
+    <!-- <script src="script/script.js"></script> -->
 </body>
 </html>
