--- a/OmarProyectoSymfony/public/index.html
+++ b/OmarProyectoSymfony/public/index.html
@@ -83,8 +83,9 @@
     </footer>
 
 
-    <script src="script/script.js"></script>
-    <script src="script/scriptPlaylist.js"></script>
+    <!-- <script src="script/script.js"></script>
+    <script src="script/scriptPlaylist.js"></script> -->
+    <script src="script/index.js"></script>
 </body>
 
 </html>
