--- a/OmarProyectoSymfony/public/canciones.html
+++ b/OmarProyectoSymfony/public/canciones.html
@@ -69,6 +69,6 @@
     </footer>
     
 
-    <script src="script/script.js"></script>
+    <script src="script/scriptCanciones.js"></script>
 </body>
 </html>
