cambios en playlist/canciones

--- a/OmarProyectoSymfony/public/index.html
+++ b/OmarProyectoSymfony/public/index.html
@@ -56,7 +56,7 @@
             </div>
         
             <div id="tituloCanciones">
-                <h2>Tus Canciones</h2>
+                <h2 id="h2Canciones">Tus Canciones</h2>
             </div>
         
             <div id="cancionesList">
