cambios de interfaz y logger

--- a/OmarProyectoSymfony/public/index.html
+++ b/OmarProyectoSymfony/public/index.html
@@ -56,7 +56,7 @@
                         <a href="playlist.html">Playlist</a>
                     </li>
                     <li>
-                        <img src="images/signomas.png" alt="signomas" id="signomas">
+                        <img src="images/signomas.png" alt="signomas" id="signomas" style="display:none">
                         <a id="plusBtn" style="display:none;">Añadir Playlist</a>
                     </li>
                 </ul>
